--- a/core/i18n/it_IT.json
+++ b/core/i18n/it_IT.json
@@ -1,7 +1,7 @@
 {
     "plugins\/center\/plugin_info\/info.xml": {
         "Plugin pour controller le hardware de votre Jeedom Center": "Plugin pour controller le hardware de votre Jeedom Center",
-        "Aucune": "Aucune"
+        "Aucune": "no"
     },
     "plugins\/center\/core\/class\/center.class.php": {
         "Etat Couleur": "Etat Couleur",
