--- a/core/i18n/ru_RU.json
+++ b/core/i18n/ru_RU.json
@@ -1,7 +1,7 @@
 {
     "plugins\/center\/plugin_info\/info.xml": {
         "Plugin pour controller le hardware de votre Jeedom Center": "Plugin pour controller le hardware de votre Jeedom Center",
-        "Aucune": "Aucune"
+        "Aucune": "нет"
     },
     "plugins\/center\/core\/class\/center.class.php": {
         "Etat Couleur": "Etat Couleur",
@@ -33,7 +33,7 @@
         "Visible": "Visible",
         "Supprimer": "Supprimer",
         "Sauvegarder": "Sauvegarder",
-        "Tableau de commandes": "Tableau de commandes",
+        "Tableau de commandes": "панель управления",
         "Nom": "Nom",
         "Options": "Options",
         "Action": "Action"
