--- a/core/i18n/ru_RU.json
+++ b/core/i18n/ru_RU.json
@@ -1,41 +1,41 @@
 {
     "plugins\/center\/plugin_info\/info.xml": {
-        "Plugin pour controller le hardware de votre Jeedom Center": "Plugin pour controller le hardware de votre Jeedom Center",
+        "Plugin pour controller le hardware de votre Jeedom Center": "Плагин для проверки аппаратного обеспечения вашего Jeedom центра",
         "Aucune": "нет"
     },
     "plugins\/center\/core\/class\/center.class.php": {
-        "Etat Couleur": "Etat Couleur",
-        "Etat relais 1": "Etat relais 1",
-        "Etat relais 2": "Etat relais 2",
-        "Rouge": "Rouge",
-        "Vert": "Vert",
-        "Bleu": "Bleu",
-        "Jaune": "Jaune",
-        "Rose": "Rose",
-        "Blanc": "Blanc",
-        "Cyan": "Cyan",
-        "Off": "Off",
-        "Off relais 1": "Off relais 1",
-        "On relais 1": "On relais 1",
-        "Off relais 2": "Off relais 2",
-        "On relais 2": "On relais 2"
+        "Etat Couleur": "Состояние Цвет",
+        "Etat relais 1": "Государственное реле 1",
+        "Etat relais 2": "Государственное реле 2",
+        "Rouge": "красный",
+        "Vert": "зеленый",
+        "Bleu": "синий",
+        "Jaune": "желтый",
+        "Rose": "розовый",
+        "Blanc": "белый",
+        "Cyan": "циан",
+        "Off": "от",
+        "Off relais 1": "Off Реле 1",
+        "On relais 1": "Одно реле 1",
+        "Off relais 2": "Off Реле 2",
+        "On relais 2": "Одно реле 2"
     },
     "plugins\/center\/desktop\/php\/center.php": {
-        "Ajouter un center": "Ajouter un center",
-        "Rechercher": "Rechercher",
-        "Mes centers": "Mes centers",
-        "Général": "Général",
-        "Nom de l'équipement": "Nom de l'équipement",
-        "Objet parent": "Objet parent",
-        "Aucun": "Aucun",
-        "Catégorie": "Catégorie",
-        "Activer": "Activer",
-        "Visible": "Visible",
-        "Supprimer": "Supprimer",
-        "Sauvegarder": "Sauvegarder",
+        "Ajouter un center": "Добавить центр",
+        "Rechercher": "поиск",
+        "Mes centers": "мои центры",
+        "Général": "общий",
+        "Nom de l'équipement": "Наименование оборудования",
+        "Objet parent": "родительский объект",
+        "Aucun": "нет",
+        "Catégorie": "категория",
+        "Activer": "активировать",
+        "Visible": "видимый",
+        "Supprimer": "удаление",
+        "Sauvegarder": "экономить",
         "Tableau de commandes": "панель управления",
-        "Nom": "Nom",
-        "Options": "Options",
-        "Action": "Action"
+        "Nom": "имя",
+        "Options": "опции",
+        "Action": "действие"
     }
 }
