--- a/core/i18n/it_IT.json
+++ b/core/i18n/it_IT.json
@@ -1,41 +1,41 @@
 {
     "plugins\/center\/plugin_info\/info.xml": {
-        "Plugin pour controller le hardware de votre Jeedom Center": "Plugin pour controller le hardware de votre Jeedom Center",
+        "Plugin pour controller le hardware de votre Jeedom Center": "Plugin per controllare l'hardware del vostro Jeedom Centro",
         "Aucune": "no"
     },
     "plugins\/center\/core\/class\/center.class.php": {
-        "Etat Couleur": "Etat Couleur",
-        "Etat relais 1": "Etat relais 1",
-        "Etat relais 2": "Etat relais 2",
-        "Rouge": "Rouge",
-        "Vert": "Vert",
-        "Bleu": "Bleu",
-        "Jaune": "Jaune",
-        "Rose": "Rose",
-        "Blanc": "Blanc",
-        "Cyan": "Cyan",
-        "Off": "Off",
-        "Off relais 1": "Off relais 1",
-        "On relais 1": "On relais 1",
-        "Off relais 2": "Off relais 2",
-        "On relais 2": "On relais 2"
+        "Etat Couleur": "Colore Stato",
+        "Etat relais 1": "Relè a stato 1",
+        "Etat relais 2": "Relè a stato 2",
+        "Rouge": "Rosso",
+        "Vert": "verde",
+        "Bleu": "blu",
+        "Jaune": "giallo",
+        "Rose": "rosa",
+        "Blanc": "bianco",
+        "Cyan": "ciano",
+        "Off": "via",
+        "Off relais 1": "Il relè 1",
+        "On relais 1": "Un relè 1",
+        "Off relais 2": "Spento Relè 2",
+        "On relais 2": "Un relè 2"
     },
     "plugins\/center\/desktop\/php\/center.php": {
-        "Ajouter un center": "Ajouter un center",
-        "Rechercher": "Rechercher",
-        "Mes centers": "Mes centers",
-        "Général": "Général",
-        "Nom de l'équipement": "Nom de l'équipement",
-        "Objet parent": "Objet parent",
-        "Aucun": "Aucun",
-        "Catégorie": "Catégorie",
-        "Activer": "Activer",
-        "Visible": "Visible",
-        "Supprimer": "Supprimer",
-        "Sauvegarder": "Sauvegarder",
-        "Tableau de commandes": "Tableau de commandes",
-        "Nom": "Nom",
-        "Options": "Options",
-        "Action": "Action"
+        "Ajouter un center": "Aggiungi centro",
+        "Rechercher": "ricercare",
+        "Mes centers": "i miei centri",
+        "Général": "generale",
+        "Nom de l'équipement": "Nome di attrezzature",
+        "Objet parent": "oggetto padre",
+        "Aucun": "no",
+        "Catégorie": "categoria",
+        "Activer": "attivare",
+        "Visible": "visibile",
+        "Supprimer": "rimuovere",
+        "Sauvegarder": "salvare",
+        "Tableau de commandes": "pannello di controllo",
+        "Nom": "Nome",
+        "Options": "opzioni",
+        "Action": "azione"
     }
 }
