[ROBOT] Action all

--- a/core/i18n/es_ES.json
+++ b/core/i18n/es_ES.json
@@ -32,7 +32,7 @@
         "Activer": "Activar",
         "Visible": "Visible",
         "Supprimer": "Borrar",
-        "Sauvegarder": "Salvaguardar",
+        "Sauvegarder": "Guardar",
         "Tableau de commandes": "Panel de control",
         "Nom": "Nombre",
         "Options": "Opciones",
