--- a/core/i18n/de_DE.json
+++ b/core/i18n/de_DE.json
@@ -1,41 +1,62 @@
 {
-    "plugins\/center\/plugin_info\/info.xml": {
-        "Plugin pour controller le hardware de votre Jeedom Center": "Plugin zur Steuerung der Hardware Ihres Jeedom-Center",
-        "Aucune": "Ohne"
+    "plugins\/wifip\/core\/class\/wifip.class.php": {
+        "Connecter Wifi": "Connecter Wifi",
+        "Déconnecter Wifi": "Déconnecter Wifi",
+        "Etat Wifi": "Etat Wifi",
+        "Etat Lan": "Etat Lan",
+        "Signal": "Signal",
+        "Rafraichir": "Rafraichir",
+        "Lan IP": "Lan IP",
+        "Wifi IP": "Wifi IP",
+        "SSID": "SSID"
     },
-    "plugins\/center\/core\/class\/center.class.php": {
-        "Etat Couleur": "Farbzustand",
-        "Etat relais 1": "Zustand Relais 1",
-        "Etat relais 2": "Zustand Relais 2",
-        "Rouge": "Rot",
-        "Vert": "Grün",
-        "Bleu": "Blau",
-        "Jaune": "Gelb",
-        "Rose": "Rosa",
-        "Blanc": "Weiß",
-        "Cyan": "Blaugrün (Cyan)",
-        "Off": "Aus",
-        "Off relais 1": "Relais 1 aus",
-        "On relais 1": "Relais 1 an",
-        "Off relais 2": "Relais 2 aus",
-        "On relais 2": "Relais 2 an"
+    "plugins\/wifip\/desktop\/php\/wifip.php": {
+        "Rechercher": "Rechercher",
+        "Gestion": "Gestion",
+        "Santé": "Santé",
+        "Mon Wifip": "Mon Wifip",
+        "Sauvegarder": "Sauvegarder",
+        "Supprimer": "Supprimer",
+        "Configuration avancée": "Configuration avancée",
+        "Equipement": "Equipement",
+        "Commandes": "Commandes",
+        "Général": "Général",
+        "Nom de l'équipement": "Nom de l'équipement",
+        "Objet parent": "Objet parent",
+        "Aucun": "Aucun",
+        "Activer": "Activer",
+        "Visible": "Visible",
+        "Wifi": "Wifi",
+        "Activer le wifi": "Activer le wifi",
+        "Réseau wifi": "Réseau wifi",
+        "Clef": "Clef",
+        "Ip Fixe Wifi": "Ip Fixe Wifi",
+        "Attention le réglage d'une ip fixe peut rendre votre box invisible du réseau. Vérifiez bien les infos renseignées !! ": "Attention le réglage d'une ip fixe peut rendre votre box invisible du réseau. Vérifiez bien les infos renseignées !! ",
+        "IP fixe": "IP fixe",
+        "Netmask": "Netmask",
+        "Gateway": "Gateway",
+        "Tethering": "Tethering",
+        "Activer Tether": "Activer Tether",
+        "Attention en activant le tether vous ne serez plus connecté au wifi. La box sera accessible en vous connectant au HotpointJeedom avec la clé et en vous rendant à l'adresse tether indiqué à droite! ": "Attention en activant le tether vous ne serez plus connecté au wifi. La box sera accessible en vous connectant au HotpointJeedom avec la clé et en vous rendant à l'adresse tether indiqué à droite! ",
+        "Clé (8 caractères minimum)": "Clé (8 caractères minimum)",
+        "Ethernet": "Ethernet",
+        "Activer ip fixe": "Activer ip fixe",
+        "Informations": "Informations",
+        "Adresse MAC ethernet": "Adresse MAC ethernet",
+        "Adresse Ip ethernet": "Adresse Ip ethernet",
+        "Masque ethernet": "Masque ethernet",
+        "Adresse MAC wifi": "Adresse MAC wifi",
+        "Adresse Ip wifi": "Adresse Ip wifi",
+        "Masque wifi": "Masque wifi",
+        "Adresse Ip Tether": "Adresse Ip Tether",
+        "Masque Tether": "Masque Tether",
+        "Nom": "Nom",
+        "Options": "Options",
+        "Action": "Action"
     },
-    "plugins\/center\/desktop\/php\/center.php": {
-        "Ajouter un center": "Center hinzufügen",
-        "Rechercher": "Suchen nach",
-        "Mes centers": "Meine Center",
-        "Général": "Allgemein",
-        "Nom de l'équipement": "Gerätename",
-        "Objet parent": "Eltern-Objekt",
-        "Aucun": "Ohne",
-        "Catégorie": "Kategorie",
-        "Activer": "aktivieren",
-        "Visible": "Sichtbar",
-        "Supprimer": "Löschen",
-        "Sauvegarder": "Speichern",
-        "Tableau de commandes": "Bedienfeld",
-        "Nom": "Name",
-        "Options": "Optionen",
-        "Action": "Aktion"
+    "plugins\/wifip\/desktop\/js\/wifip.js": {
+        "Santé Wifip": "Santé Wifip",
+        "Historiser": "Historiser",
+        "Tester": "Tester"
     }
 }
