--- a/core/i18n/id_ID.json
+++ b/core/i18n/id_ID.json
@@ -1,41 +1,62 @@
 {
-    "plugins\/center\/plugin_info\/info.xml": {
-        "Plugin pour controller le hardware de votre Jeedom Center": "Plugin untuk memeriksa hardware dari Jeedom Center",
-        "Aucune": "tidak"
+    "plugins\/wifip\/core\/class\/wifip.class.php": {
+        "Connecter Wifi": "Connecter Wifi",
+        "Déconnecter Wifi": "Déconnecter Wifi",
+        "Etat Wifi": "Etat Wifi",
+        "Etat Lan": "Etat Lan",
+        "Signal": "Signal",
+        "Rafraichir": "Rafraichir",
+        "Lan IP": "Lan IP",
+        "Wifi IP": "Wifi IP",
+        "SSID": "SSID"
     },
-    "plugins\/center\/core\/class\/center.class.php": {
-        "Etat Couleur": "Warna negara",
-        "Etat relais 1": "Relay negara 1",
-        "Etat relais 2": "State Relay 2",
-        "Rouge": "merah",
-        "Vert": "hijau",
-        "Bleu": "biru",
-        "Jaune": "kuning",
-        "Rose": "berwarna merah muda",
-        "Blanc": "putih",
-        "Cyan": "cyan",
-        "Off": "lepas",
-        "Off relais 1": "Off Relay 1",
-        "On relais 1": "Satu relay 1",
-        "Off relais 2": "Off Relay 2",
-        "On relais 2": "Satu relay 2"
+    "plugins\/wifip\/desktop\/php\/wifip.php": {
+        "Rechercher": "Rechercher",
+        "Gestion": "Gestion",
+        "Santé": "Santé",
+        "Mon Wifip": "Mon Wifip",
+        "Sauvegarder": "Sauvegarder",
+        "Supprimer": "Supprimer",
+        "Configuration avancée": "Configuration avancée",
+        "Equipement": "Equipement",
+        "Commandes": "Commandes",
+        "Général": "Général",
+        "Nom de l'équipement": "Nom de l'équipement",
+        "Objet parent": "Objet parent",
+        "Aucun": "Aucun",
+        "Activer": "Activer",
+        "Visible": "Visible",
+        "Wifi": "Wifi",
+        "Activer le wifi": "Activer le wifi",
+        "Réseau wifi": "Réseau wifi",
+        "Clef": "Clef",
+        "Ip Fixe Wifi": "Ip Fixe Wifi",
+        "Attention le réglage d'une ip fixe peut rendre votre box invisible du réseau. Vérifiez bien les infos renseignées !! ": "Attention le réglage d'une ip fixe peut rendre votre box invisible du réseau. Vérifiez bien les infos renseignées !! ",
+        "IP fixe": "IP fixe",
+        "Netmask": "Netmask",
+        "Gateway": "Gateway",
+        "Tethering": "Tethering",
+        "Activer Tether": "Activer Tether",
+        "Attention en activant le tether vous ne serez plus connecté au wifi. La box sera accessible en vous connectant au HotpointJeedom avec la clé et en vous rendant à l'adresse tether indiqué à droite! ": "Attention en activant le tether vous ne serez plus connecté au wifi. La box sera accessible en vous connectant au HotpointJeedom avec la clé et en vous rendant à l'adresse tether indiqué à droite! ",
+        "Clé (8 caractères minimum)": "Clé (8 caractères minimum)",
+        "Ethernet": "Ethernet",
+        "Activer ip fixe": "Activer ip fixe",
+        "Informations": "Informations",
+        "Adresse MAC ethernet": "Adresse MAC ethernet",
+        "Adresse Ip ethernet": "Adresse Ip ethernet",
+        "Masque ethernet": "Masque ethernet",
+        "Adresse MAC wifi": "Adresse MAC wifi",
+        "Adresse Ip wifi": "Adresse Ip wifi",
+        "Masque wifi": "Masque wifi",
+        "Adresse Ip Tether": "Adresse Ip Tether",
+        "Masque Tether": "Masque Tether",
+        "Nom": "Nom",
+        "Options": "Options",
+        "Action": "Action"
     },
-    "plugins\/center\/desktop\/php\/center.php": {
-        "Ajouter un center": "Tambah pusat",
-        "Rechercher": "Mencari",
-        "Mes centers": "pusat saya",
-        "Général": "Umum",
-        "Nom de l'équipement": "Nama peralatan",
-        "Objet parent": "Objek induk",
-        "Aucun": "Tak ada",
-        "Catégorie": "Kategori",
-        "Activer": "Mengaktifkan",
-        "Visible": "Terlihat",
-        "Supprimer": "Menghapus",
-        "Sauvegarder": "Menyimpan",
-        "Tableau de commandes": "panel kontrol",
-        "Nom": "Nama",
-        "Options": "Pilihan",
-        "Action": "tindakan"
+    "plugins\/wifip\/desktop\/js\/wifip.js": {
+        "Santé Wifip": "Santé Wifip",
+        "Historiser": "Historiser",
+        "Tester": "Tester"
     }
 }
