--- a/core/i18n/tr.json
+++ b/core/i18n/tr.json
@@ -1,41 +1,62 @@
 {
-    "plugins\/center\/plugin_info\/info.xml": {
-        "Plugin pour controller le hardware de votre Jeedom Center": "Jeedom center'\\ün donanımını kontrol etmek için eklenti",
-        "Aucune": "Hiçbir"
+    "plugins\/wifip\/core\/class\/wifip.class.php": {
+        "Connecter Wifi": "Connecter Wifi",
+        "Déconnecter Wifi": "Déconnecter Wifi",
+        "Etat Wifi": "Etat Wifi",
+        "Etat Lan": "Etat Lan",
+        "Signal": "Signal",
+        "Rafraichir": "Rafraichir",
+        "Lan IP": "Lan IP",
+        "Wifi IP": "Wifi IP",
+        "SSID": "SSID"
     },
-    "plugins\/center\/core\/class\/center.class.php": {
-        "Etat Couleur": "Renk durum",
-        "Etat relais 1": "Röle 1 durum",
-        "Etat relais 2": "Röle 2 durum",
-        "Rouge": "Kırmızı",
-        "Vert": "Yeşil",
-        "Bleu": "Mavi",
-        "Jaune": "Sarı",
-        "Rose": "Pembe",
-        "Blanc": "Beyaz",
-        "Cyan": "Cam göbeği",
-        "Off": "Off",
-        "Off relais 1": "Röle 1 Off",
-        "On relais 1": "Röle 1 On",
-        "Off relais 2": "Röle 2 Off",
-        "On relais 2": "Röle 2 On"
+    "plugins\/wifip\/desktop\/php\/wifip.php": {
+        "Rechercher": "Rechercher",
+        "Gestion": "Gestion",
+        "Santé": "Santé",
+        "Mon Wifip": "Mon Wifip",
+        "Sauvegarder": "Sauvegarder",
+        "Supprimer": "Supprimer",
+        "Configuration avancée": "Configuration avancée",
+        "Equipement": "Equipement",
+        "Commandes": "Commandes",
+        "Général": "Général",
+        "Nom de l'équipement": "Nom de l'équipement",
+        "Objet parent": "Objet parent",
+        "Aucun": "Aucun",
+        "Activer": "Activer",
+        "Visible": "Visible",
+        "Wifi": "Wifi",
+        "Activer le wifi": "Activer le wifi",
+        "Réseau wifi": "Réseau wifi",
+        "Clef": "Clef",
+        "Ip Fixe Wifi": "Ip Fixe Wifi",
+        "Attention le réglage d'une ip fixe peut rendre votre box invisible du réseau. Vérifiez bien les infos renseignées !! ": "Attention le réglage d'une ip fixe peut rendre votre box invisible du réseau. Vérifiez bien les infos renseignées !! ",
+        "IP fixe": "IP fixe",
+        "Netmask": "Netmask",
+        "Gateway": "Gateway",
+        "Tethering": "Tethering",
+        "Activer Tether": "Activer Tether",
+        "Attention en activant le tether vous ne serez plus connecté au wifi. La box sera accessible en vous connectant au HotpointJeedom avec la clé et en vous rendant à l'adresse tether indiqué à droite! ": "Attention en activant le tether vous ne serez plus connecté au wifi. La box sera accessible en vous connectant au HotpointJeedom avec la clé et en vous rendant à l'adresse tether indiqué à droite! ",
+        "Clé (8 caractères minimum)": "Clé (8 caractères minimum)",
+        "Ethernet": "Ethernet",
+        "Activer ip fixe": "Activer ip fixe",
+        "Informations": "Informations",
+        "Adresse MAC ethernet": "Adresse MAC ethernet",
+        "Adresse Ip ethernet": "Adresse Ip ethernet",
+        "Masque ethernet": "Masque ethernet",
+        "Adresse MAC wifi": "Adresse MAC wifi",
+        "Adresse Ip wifi": "Adresse Ip wifi",
+        "Masque wifi": "Masque wifi",
+        "Adresse Ip Tether": "Adresse Ip Tether",
+        "Masque Tether": "Masque Tether",
+        "Nom": "Nom",
+        "Options": "Options",
+        "Action": "Action"
     },
-    "plugins\/center\/desktop\/php\/center.php": {
-        "Ajouter un center": "Center ekleyin",
-        "Rechercher": "Arayın",
-        "Mes centers": "Centers'\\lerim",
-        "Général": "Genel",
-        "Nom de l'équipement": "Ekipman ismi",
-        "Objet parent": "Üst nesne",
-        "Aucun": "Hiçbir",
-        "Catégorie": "Kategori",
-        "Activer": "Etkinleştirmek",
-        "Visible": "Görülebilir",
-        "Supprimer": "Sil",
-        "Sauvegarder": "Kaydet",
-        "Tableau de commandes": "Komut tablosu",
-        "Nom": "İsim",
-        "Options": "Opsiyonlar",
-        "Action": "Etki"
+    "plugins\/wifip\/desktop\/js\/wifip.js": {
+        "Santé Wifip": "Santé Wifip",
+        "Historiser": "Historiser",
+        "Tester": "Tester"
     }
 }
