--- a/core/i18n/es_ES.json
+++ b/core/i18n/es_ES.json
@@ -4,35 +4,35 @@
         "Déconnecter Wifi": "Déconnecter Wifi",
         "Etat Wifi": "Etat Wifi",
         "Etat Lan": "Etat Lan",
-        "Signal": "Signal",
-        "Rafraichir": "Rafraichir",
+        "Signal": "Señal",
+        "Rafraichir": "Actualizar",
         "Lan IP": "Lan IP",
         "Wifi IP": "Wifi IP",
         "SSID": "SSID"
     },
     "plugins\/wifip\/desktop\/php\/wifip.php": {
-        "Rechercher": "Rechercher",
-        "Gestion": "Gestion",
-        "Santé": "Santé",
+        "Rechercher": "Buscar",
+        "Gestion": "Administración",
+        "Santé": "Salud",
         "Mon Wifip": "Mon Wifip",
-        "Sauvegarder": "Sauvegarder",
-        "Supprimer": "Supprimer",
-        "Configuration avancée": "Configuration avancée",
-        "Equipement": "Equipement",
-        "Commandes": "Commandes",
-        "Général": "Général",
-        "Nom de l'équipement": "Nom de l'équipement",
-        "Objet parent": "Objet parent",
-        "Aucun": "Aucun",
-        "Activer": "Activer",
+        "Sauvegarder": "Guardar",
+        "Supprimer": "Borrar",
+        "Configuration avancée": "Configuración avanzada",
+        "Equipement": "Dispositivos",
+        "Commandes": "Comandos",
+        "Général": "General",
+        "Nom de l'équipement": "Nombre del dispositivo",
+        "Objet parent": "Objeto padre",
+        "Aucun": "Ninguno",
+        "Activer": "Activar",
         "Visible": "Visible",
-        "Wifi": "Wifi",
-        "Activer le wifi": "Activer le wifi",
-        "Réseau wifi": "Réseau wifi",
-        "Clef": "Clef",
+        "Wifi": "WiFi",
+        "Activer le wifi": "Activar el WiFi",
+        "Réseau wifi": "Redes WiFi",
+        "Clef": "Clave",
         "Ip Fixe Wifi": "Ip Fixe Wifi",
         "Attention le réglage d'une ip fixe peut rendre votre box invisible du réseau. Vérifiez bien les infos renseignées !! ": "Attention le réglage d'une ip fixe peut rendre votre box invisible du réseau. Vérifiez bien les infos renseignées !! ",
-        "IP fixe": "IP fixe",
+        "IP fixe": "IP fija",
         "Netmask": "Netmask",
         "Gateway": "Gateway",
         "Tethering": "Tethering",
@@ -41,7 +41,7 @@
         "Clé (8 caractères minimum)": "Clé (8 caractères minimum)",
         "Ethernet": "Ethernet",
         "Activer ip fixe": "Activer ip fixe",
-        "Informations": "Informations",
+        "Informations": "Informaciones",
         "Adresse MAC ethernet": "Adresse MAC ethernet",
         "Adresse Ip ethernet": "Adresse Ip ethernet",
         "Masque ethernet": "Masque ethernet",
@@ -50,13 +50,13 @@
         "Masque wifi": "Masque wifi",
         "Adresse Ip Tether": "Adresse Ip Tether",
         "Masque Tether": "Masque Tether",
-        "Nom": "Nom",
-        "Options": "Options",
-        "Action": "Action"
+        "Nom": "Nombre",
+        "Options": "Opciones",
+        "Action": "Acción"
     },
     "plugins\/wifip\/desktop\/js\/wifip.js": {
         "Santé Wifip": "Santé Wifip",
-        "Historiser": "Historiser",
-        "Tester": "Tester"
+        "Historiser": "Historizar",
+        "Tester": "Probar"
     }
 }
