--- a/core/i18n/ru_RU.json
+++ b/core/i18n/ru_RU.json
@@ -4,44 +4,44 @@
         "Déconnecter Wifi": "Déconnecter Wifi",
         "Etat Wifi": "Etat Wifi",
         "Etat Lan": "Etat Lan",
-        "Signal": "Signal",
-        "Rafraichir": "Rafraichir",
+        "Signal": "сигнал",
+        "Rafraichir": "Обновить",
         "Lan IP": "Lan IP",
         "Wifi IP": "Wifi IP",
         "SSID": "SSID"
     },
     "plugins\/wifip\/desktop\/php\/wifip.php": {
-        "Rechercher": "Rechercher",
-        "Gestion": "Gestion",
-        "Santé": "Santé",
+        "Rechercher": "поиск",
+        "Gestion": "Управление",
+        "Santé": "Здоровье",
         "Mon Wifip": "Mon Wifip",
-        "Sauvegarder": "Sauvegarder",
-        "Supprimer": "Supprimer",
-        "Configuration avancée": "Configuration avancée",
-        "Equipement": "Equipement",
-        "Commandes": "Commandes",
-        "Général": "Général",
-        "Nom de l'équipement": "Nom de l'équipement",
-        "Objet parent": "Objet parent",
-        "Aucun": "Aucun",
-        "Activer": "Activer",
-        "Visible": "Visible",
+        "Sauvegarder": "экономить",
+        "Supprimer": "удаление",
+        "Configuration avancée": "Расширенные настройки",
+        "Equipement": "Оборудование",
+        "Commandes": "Команды",
+        "Général": "общий",
+        "Nom de l'équipement": "Название оборудования",
+        "Objet parent": "родительский объект",
+        "Aucun": "нет",
+        "Activer": "активировать",
+        "Visible": "видимый",
         "Wifi": "Wifi",
         "Activer le wifi": "Activer le wifi",
         "Réseau wifi": "Réseau wifi",
-        "Clef": "Clef",
+        "Clef": "ключ",
         "Ip Fixe Wifi": "Ip Fixe Wifi",
         "Attention le réglage d'une ip fixe peut rendre votre box invisible du réseau. Vérifiez bien les infos renseignées !! ": "Attention le réglage d'une ip fixe peut rendre votre box invisible du réseau. Vérifiez bien les infos renseignées !! ",
         "IP fixe": "IP fixe",
         "Netmask": "Netmask",
-        "Gateway": "Gateway",
+        "Gateway": "Шлюз",
         "Tethering": "Tethering",
         "Activer Tether": "Activer Tether",
         "Attention en activant le tether vous ne serez plus connecté au wifi. La box sera accessible en vous connectant au HotpointJeedom avec la clé et en vous rendant à l'adresse tether indiqué à droite! ": "Attention en activant le tether vous ne serez plus connecté au wifi. La box sera accessible en vous connectant au HotpointJeedom avec la clé et en vous rendant à l'adresse tether indiqué à droite! ",
         "Clé (8 caractères minimum)": "Clé (8 caractères minimum)",
         "Ethernet": "Ethernet",
         "Activer ip fixe": "Activer ip fixe",
-        "Informations": "Informations",
+        "Informations": "Информация",
         "Adresse MAC ethernet": "Adresse MAC ethernet",
         "Adresse Ip ethernet": "Adresse Ip ethernet",
         "Masque ethernet": "Masque ethernet",
@@ -50,13 +50,13 @@
         "Masque wifi": "Masque wifi",
         "Adresse Ip Tether": "Adresse Ip Tether",
         "Masque Tether": "Masque Tether",
-        "Nom": "Nom",
-        "Options": "Options",
-        "Action": "Action"
+        "Nom": "имя",
+        "Options": "Опции",
+        "Action": "Действие"
     },
     "plugins\/wifip\/desktop\/js\/wifip.js": {
         "Santé Wifip": "Santé Wifip",
-        "Historiser": "Historiser",
-        "Tester": "Tester"
+        "Historiser": "История",
+        "Tester": "Тест"
     }
 }
