--- a/core/i18n/tr.json
+++ b/core/i18n/tr.json
@@ -4,44 +4,44 @@
         "Déconnecter Wifi": "Déconnecter Wifi",
         "Etat Wifi": "Etat Wifi",
         "Etat Lan": "Etat Lan",
-        "Signal": "Signal",
-        "Rafraichir": "Rafraichir",
+        "Signal": "Sinyal",
+        "Rafraichir": "Yenile",
         "Lan IP": "Lan IP",
         "Wifi IP": "Wifi IP",
         "SSID": "SSID"
     },
     "plugins\/wifip\/desktop\/php\/wifip.php": {
-        "Rechercher": "Rechercher",
-        "Gestion": "Gestion",
-        "Santé": "Santé",
+        "Rechercher": "Arayın",
+        "Gestion": "Yönetim",
+        "Santé": "Sağlık",
         "Mon Wifip": "Mon Wifip",
-        "Sauvegarder": "Sauvegarder",
-        "Supprimer": "Supprimer",
-        "Configuration avancée": "Configuration avancée",
-        "Equipement": "Equipement",
-        "Commandes": "Commandes",
-        "Général": "Général",
-        "Nom de l'équipement": "Nom de l'équipement",
-        "Objet parent": "Objet parent",
-        "Aucun": "Aucun",
-        "Activer": "Activer",
-        "Visible": "Visible",
+        "Sauvegarder": "Kaydet",
+        "Supprimer": "Sil",
+        "Configuration avancée": "Gelişmiş ayarlar",
+        "Equipement": "Cihaz",
+        "Commandes": "Komutalar",
+        "Général": "Genel",
+        "Nom de l'équipement": "Ekipman ismi",
+        "Objet parent": "Ana nesne",
+        "Aucun": "Hiçbir",
+        "Activer": "Etkinleştir",
+        "Visible": "Görülebilir",
         "Wifi": "Wifi",
         "Activer le wifi": "Activer le wifi",
         "Réseau wifi": "Réseau wifi",
-        "Clef": "Clef",
+        "Clef": "Anahtar",
         "Ip Fixe Wifi": "Ip Fixe Wifi",
         "Attention le réglage d'une ip fixe peut rendre votre box invisible du réseau. Vérifiez bien les infos renseignées !! ": "Attention le réglage d'une ip fixe peut rendre votre box invisible du réseau. Vérifiez bien les infos renseignées !! ",
         "IP fixe": "IP fixe",
         "Netmask": "Netmask",
-        "Gateway": "Gateway",
+        "Gateway": "Gateway : Geçit",
         "Tethering": "Tethering",
         "Activer Tether": "Activer Tether",
         "Attention en activant le tether vous ne serez plus connecté au wifi. La box sera accessible en vous connectant au HotpointJeedom avec la clé et en vous rendant à l'adresse tether indiqué à droite! ": "Attention en activant le tether vous ne serez plus connecté au wifi. La box sera accessible en vous connectant au HotpointJeedom avec la clé et en vous rendant à l'adresse tether indiqué à droite! ",
         "Clé (8 caractères minimum)": "Clé (8 caractères minimum)",
         "Ethernet": "Ethernet",
         "Activer ip fixe": "Activer ip fixe",
-        "Informations": "Informations",
+        "Informations": "Bilgiler",
         "Adresse MAC ethernet": "Adresse MAC ethernet",
         "Adresse Ip ethernet": "Adresse Ip ethernet",
         "Masque ethernet": "Masque ethernet",
@@ -50,13 +50,13 @@
         "Masque wifi": "Masque wifi",
         "Adresse Ip Tether": "Adresse Ip Tether",
         "Masque Tether": "Masque Tether",
-        "Nom": "Nom",
-        "Options": "Options",
-        "Action": "Action"
+        "Nom": "Soyisim",
+        "Options": "Opsiyonlar",
+        "Action": "Eylem"
     },
     "plugins\/wifip\/desktop\/js\/wifip.js": {
         "Santé Wifip": "Santé Wifip",
-        "Historiser": "Historiser",
-        "Tester": "Tester"
+        "Historiser": "Tarihe göre sırala",
+        "Tester": "Test et"
     }
 }
