--- a/core/i18n/en_US.json
+++ b/core/i18n/en_US.json
@@ -5,34 +5,34 @@
         "Etat Wifi": "Etat Wifi",
         "Etat Lan": "Etat Lan",
         "Signal": "Signal",
-        "Rafraichir": "Rafraichir",
+        "Rafraichir": "Refresh",
         "Lan IP": "Lan IP",
         "Wifi IP": "Wifi IP",
         "SSID": "SSID"
     },
     "plugins\/wifip\/desktop\/php\/wifip.php": {
-        "Rechercher": "Rechercher",
-        "Gestion": "Gestion",
-        "Santé": "Santé",
+        "Rechercher": "Search",
+        "Gestion": "Management",
+        "Santé": "Health",
         "Mon Wifip": "Mon Wifip",
-        "Sauvegarder": "Sauvegarder",
-        "Supprimer": "Supprimer",
-        "Configuration avancée": "Configuration avancée",
-        "Equipement": "Equipement",
-        "Commandes": "Commandes",
-        "Général": "Général",
-        "Nom de l'équipement": "Nom de l'équipement",
-        "Objet parent": "Objet parent",
-        "Aucun": "Aucun",
-        "Activer": "Activer",
+        "Sauvegarder": "Save",
+        "Supprimer": "Delete",
+        "Configuration avancée": "Advanced configuration",
+        "Equipement": "Device",
+        "Commandes": "Commands",
+        "Général": "Main",
+        "Nom de l'équipement": "Device name",
+        "Objet parent": "Parent object",
+        "Aucun": "None",
+        "Activer": "Activate",
         "Visible": "Visible",
         "Wifi": "Wifi",
         "Activer le wifi": "Activer le wifi",
         "Réseau wifi": "Réseau wifi",
-        "Clef": "Clef",
+        "Clef": "Key",
         "Ip Fixe Wifi": "Ip Fixe Wifi",
         "Attention le réglage d'une ip fixe peut rendre votre box invisible du réseau. Vérifiez bien les infos renseignées !! ": "Attention le réglage d'une ip fixe peut rendre votre box invisible du réseau. Vérifiez bien les infos renseignées !! ",
-        "IP fixe": "IP fixe",
+        "IP fixe": "Fixed IP",
         "Netmask": "Netmask",
         "Gateway": "Gateway",
         "Tethering": "Tethering",
@@ -41,7 +41,7 @@
         "Clé (8 caractères minimum)": "Clé (8 caractères minimum)",
         "Ethernet": "Ethernet",
         "Activer ip fixe": "Activer ip fixe",
-        "Informations": "Informations",
+        "Informations": "Information",
         "Adresse MAC ethernet": "Adresse MAC ethernet",
         "Adresse Ip ethernet": "Adresse Ip ethernet",
         "Masque ethernet": "Masque ethernet",
@@ -50,13 +50,13 @@
         "Masque wifi": "Masque wifi",
         "Adresse Ip Tether": "Adresse Ip Tether",
         "Masque Tether": "Masque Tether",
-        "Nom": "Nom",
+        "Nom": "Name",
         "Options": "Options",
         "Action": "Action"
     },
     "plugins\/wifip\/desktop\/js\/wifip.js": {
         "Santé Wifip": "Santé Wifip",
-        "Historiser": "Historiser",
-        "Tester": "Tester"
+        "Historiser": "Historize",
+        "Tester": "Test"
     }
 }
