--- a/core/i18n/id_ID.json
+++ b/core/i18n/id_ID.json
@@ -4,32 +4,32 @@
         "Déconnecter Wifi": "Déconnecter Wifi",
         "Etat Wifi": "Etat Wifi",
         "Etat Lan": "Etat Lan",
-        "Signal": "Signal",
-        "Rafraichir": "Rafraichir",
+        "Signal": "sinyal",
+        "Rafraichir": "menyegarkan",
         "Lan IP": "Lan IP",
         "Wifi IP": "Wifi IP",
         "SSID": "SSID"
     },
     "plugins\/wifip\/desktop\/php\/wifip.php": {
-        "Rechercher": "Rechercher",
-        "Gestion": "Gestion",
-        "Santé": "Santé",
+        "Rechercher": "pencarian",
+        "Gestion": "Manajemen",
+        "Santé": "Bidang Kesehatan",
         "Mon Wifip": "Mon Wifip",
-        "Sauvegarder": "Sauvegarder",
-        "Supprimer": "Supprimer",
-        "Configuration avancée": "Configuration avancée",
-        "Equipement": "Equipement",
-        "Commandes": "Commandes",
-        "Général": "Général",
-        "Nom de l'équipement": "Nom de l'équipement",
-        "Objet parent": "Objet parent",
-        "Aucun": "Aucun",
-        "Activer": "Activer",
-        "Visible": "Visible",
+        "Sauvegarder": "menyimpan",
+        "Supprimer": "menghapus",
+        "Configuration avancée": "konfigurasi lanjutan",
+        "Equipement": "Peralatan",
+        "Commandes": "Perintah",
+        "Général": "umum",
+        "Nom de l'équipement": "Nama peralatan",
+        "Objet parent": "obyek orangtua",
+        "Aucun": "tidak",
+        "Activer": "mengaktifkan",
+        "Visible": "terlihat",
         "Wifi": "Wifi",
         "Activer le wifi": "Activer le wifi",
         "Réseau wifi": "Réseau wifi",
-        "Clef": "Clef",
+        "Clef": "Kunci",
         "Ip Fixe Wifi": "Ip Fixe Wifi",
         "Attention le réglage d'une ip fixe peut rendre votre box invisible du réseau. Vérifiez bien les infos renseignées !! ": "Attention le réglage d'une ip fixe peut rendre votre box invisible du réseau. Vérifiez bien les infos renseignées !! ",
         "IP fixe": "IP fixe",
@@ -41,7 +41,7 @@
         "Clé (8 caractères minimum)": "Clé (8 caractères minimum)",
         "Ethernet": "Ethernet",
         "Activer ip fixe": "Activer ip fixe",
-        "Informations": "Informations",
+        "Informations": "Informasi",
         "Adresse MAC ethernet": "Adresse MAC ethernet",
         "Adresse Ip ethernet": "Adresse Ip ethernet",
         "Masque ethernet": "Masque ethernet",
@@ -50,13 +50,13 @@
         "Masque wifi": "Masque wifi",
         "Adresse Ip Tether": "Adresse Ip Tether",
         "Masque Tether": "Masque Tether",
-        "Nom": "Nom",
-        "Options": "Options",
-        "Action": "Action"
+        "Nom": "nama",
+        "Options": "Pilihan",
+        "Action": "Tindakan"
     },
     "plugins\/wifip\/desktop\/js\/wifip.js": {
         "Santé Wifip": "Santé Wifip",
-        "Historiser": "Historiser",
-        "Tester": "Tester"
+        "Historiser": "Historicize",
+        "Tester": "Coba"
     }
 }
