--- a/core/i18n/it_IT.json
+++ b/core/i18n/it_IT.json
@@ -4,35 +4,35 @@
         "Déconnecter Wifi": "Déconnecter Wifi",
         "Etat Wifi": "Etat Wifi",
         "Etat Lan": "Etat Lan",
-        "Signal": "Signal",
-        "Rafraichir": "Rafraichir",
+        "Signal": "segnale",
+        "Rafraichir": "Ricarica",
         "Lan IP": "Lan IP",
         "Wifi IP": "Wifi IP",
         "SSID": "SSID"
     },
     "plugins\/wifip\/desktop\/php\/wifip.php": {
-        "Rechercher": "Rechercher",
-        "Gestion": "Gestion",
-        "Santé": "Santé",
+        "Rechercher": "ricercare",
+        "Gestion": "Gestione",
+        "Santé": "Salute",
         "Mon Wifip": "Mon Wifip",
-        "Sauvegarder": "Sauvegarder",
-        "Supprimer": "Supprimer",
-        "Configuration avancée": "Configuration avancée",
-        "Equipement": "Equipement",
-        "Commandes": "Commandes",
-        "Général": "Général",
-        "Nom de l'équipement": "Nom de l'équipement",
-        "Objet parent": "Objet parent",
-        "Aucun": "Aucun",
-        "Activer": "Activer",
-        "Visible": "Visible",
+        "Sauvegarder": "salvare",
+        "Supprimer": "rimuovere",
+        "Configuration avancée": "Configurazione avanzata",
+        "Equipement": "Dispositivo",
+        "Commandes": "Comandi",
+        "Général": "generale",
+        "Nom de l'équipement": "Nome dispositivo",
+        "Objet parent": "oggetto padre",
+        "Aucun": "no",
+        "Activer": "attivare",
+        "Visible": "visibile",
         "Wifi": "Wifi",
-        "Activer le wifi": "Activer le wifi",
-        "Réseau wifi": "Réseau wifi",
-        "Clef": "Clef",
+        "Activer le wifi": "Attiva Wifi",
+        "Réseau wifi": "Rete Wifi",
+        "Clef": "Chiave",
         "Ip Fixe Wifi": "Ip Fixe Wifi",
         "Attention le réglage d'une ip fixe peut rendre votre box invisible du réseau. Vérifiez bien les infos renseignées !! ": "Attention le réglage d'une ip fixe peut rendre votre box invisible du réseau. Vérifiez bien les infos renseignées !! ",
-        "IP fixe": "IP fixe",
+        "IP fixe": "IP fissi",
         "Netmask": "Netmask",
         "Gateway": "Gateway",
         "Tethering": "Tethering",
@@ -41,7 +41,7 @@
         "Clé (8 caractères minimum)": "Clé (8 caractères minimum)",
         "Ethernet": "Ethernet",
         "Activer ip fixe": "Activer ip fixe",
-        "Informations": "Informations",
+        "Informations": "Informazioni",
         "Adresse MAC ethernet": "Adresse MAC ethernet",
         "Adresse Ip ethernet": "Adresse Ip ethernet",
         "Masque ethernet": "Masque ethernet",
@@ -50,13 +50,13 @@
         "Masque wifi": "Masque wifi",
         "Adresse Ip Tether": "Adresse Ip Tether",
         "Masque Tether": "Masque Tether",
-        "Nom": "Nom",
-        "Options": "Options",
-        "Action": "Action"
+        "Nom": "Nome",
+        "Options": "Opzioni",
+        "Action": "Azione"
     },
     "plugins\/wifip\/desktop\/js\/wifip.js": {
         "Santé Wifip": "Santé Wifip",
-        "Historiser": "Historiser",
-        "Tester": "Tester"
+        "Historiser": "Storicizza",
+        "Tester": "Prova"
     }
 }
