[ROBOT] Action all

--- a/core/i18n/es_ES.json
+++ b/core/i18n/es_ES.json
@@ -1,9 +1,9 @@
 {
     "plugins\/wifip\/core\/class\/wifip.class.php": {
-        "Connecter Wifi": "Connecter Wifi",
-        "Déconnecter Wifi": "Déconnecter Wifi",
-        "Etat Wifi": "Etat Wifi",
-        "Etat Lan": "Etat Lan",
+        "Connecter Wifi": "Conectar Wifi",
+        "Déconnecter Wifi": "Desconectar Wifi",
+        "Etat Wifi": "Estado Wifi",
+        "Etat Lan": "Estado Lan",
         "Signal": "Señal",
         "Rafraichir": "Actualizar",
         "Lan IP": "Lan IP",
@@ -14,7 +14,7 @@
         "Rechercher": "Buscar",
         "Gestion": "Administración",
         "Santé": "Salud",
-        "Mon Wifip": "Mon Wifip",
+        "Mon Wifip": "Mi Wifip",
         "Sauvegarder": "Guardar",
         "Supprimer": "Borrar",
         "Configuration avancée": "Configuración avanzada",
@@ -30,32 +30,32 @@
         "Activer le wifi": "Activar el WiFi",
         "Réseau wifi": "Redes WiFi",
         "Clef": "Clave",
-        "Ip Fixe Wifi": "Ip Fixe Wifi",
-        "Attention le réglage d'une ip fixe peut rendre votre box invisible du réseau. Vérifiez bien les infos renseignées !! ": "Attention le réglage d'une ip fixe peut rendre votre box invisible du réseau. Vérifiez bien les infos renseignées !! ",
+        "Ip Fixe Wifi": "Ip fija Wifi",
+        "Attention le réglage d'une ip fixe peut rendre votre box invisible du réseau. Vérifiez bien les infos renseignées !! ": "¡Atención la configuración de una ip fija puede hacer que su sistema sea invisible desde la red. Revise la información cuidadosamente! ",
         "IP fixe": "IP fija",
         "Netmask": "Netmask",
         "Gateway": "Gateway",
         "Tethering": "Tethering",
-        "Activer Tether": "Activer Tether",
-        "Attention en activant le tether vous ne serez plus connecté au wifi. La box sera accessible en vous connectant au HotpointJeedom avec la clé et en vous rendant à l'adresse tether indiqué à droite! ": "Attention en activant le tether vous ne serez plus connecté au wifi. La box sera accessible en vous connectant au HotpointJeedom avec la clé et en vous rendant à l'adresse tether indiqué à droite! ",
-        "Clé (8 caractères minimum)": "Clé (8 caractères minimum)",
+        "Activer Tether": "Activar Tether",
+        "Attention en activant le tether vous ne serez plus connecté au wifi. La box sera accessible en vous connectant au HotpointJeedom avec la clé et en vous rendant à l'adresse tether indiqué à droite! ": "¡Ten cuidado al activar el tether, no estarás conectado al wifi. El sistema será accesible conectándose al HotpointJeedom con la clave y yendo a la dirección ip de tether indicado a la derecha! ",
+        "Clé (8 caractères minimum)": "Clave (8 caracteres mínimo)",
         "Ethernet": "Ethernet",
-        "Activer ip fixe": "Activer ip fixe",
+        "Activer ip fixe": "Activar ip fija",
         "Informations": "Informaciones",
-        "Adresse MAC ethernet": "Adresse MAC ethernet",
-        "Adresse Ip ethernet": "Adresse Ip ethernet",
-        "Masque ethernet": "Masque ethernet",
-        "Adresse MAC wifi": "Adresse MAC wifi",
-        "Adresse Ip wifi": "Adresse Ip wifi",
-        "Masque wifi": "Masque wifi",
-        "Adresse Ip Tether": "Adresse Ip Tether",
-        "Masque Tether": "Masque Tether",
+        "Adresse MAC ethernet": "Dirección MAC ethernet",
+        "Adresse Ip ethernet": "Dirección Ip ethernet",
+        "Masque ethernet": "Máscara ethernet",
+        "Adresse MAC wifi": "dirección MAC wifi",
+        "Adresse Ip wifi": "Dirección Ip wifi",
+        "Masque wifi": "Máscara wifi",
+        "Adresse Ip Tether": "Dirección Ip Tether",
+        "Masque Tether": "Máscara Tether",
         "Nom": "Nombre",
         "Options": "Opciones",
         "Action": "Acción"
     },
     "plugins\/wifip\/desktop\/js\/wifip.js": {
-        "Santé Wifip": "Santé Wifip",
+        "Santé Wifip": "Salud Wifip",
         "Historiser": "Historizar",
         "Tester": "Probar"
     }
