--- a/core/i18n/de_DE.json
+++ b/core/i18n/de_DE.json
@@ -1,62 +1,41 @@
 {
-    "plugins\/wifip\/core\/class\/wifip.class.php": {
-        "Connecter Wifi": "Connecter Wifi",
-        "Déconnecter Wifi": "Déconnecter Wifi",
-        "Etat Wifi": "Etat Wifi",
-        "Etat Lan": "Etat Lan",
-        "Signal": "Signal",
-        "Rafraichir": "Aktualisieren",
-        "Lan IP": "Lan IP",
-        "Wifi IP": "Wifi IP",
-        "SSID": "SSID"
+    "plugins\/center\/plugin_info\/info.xml": {
+        "Plugin pour controller le hardware de votre Jeedom Center": "Plugin zur Steuerung der Hardware Ihres Jeedom-Center",
+        "Aucune": "Ohne"
     },
-    "plugins\/wifip\/desktop\/php\/wifip.php": {
+    "plugins\/center\/core\/class\/center.class.php": {
+        "Etat Couleur": "Farbzustand",
+        "Etat relais 1": "Zustand Relais 1",
+        "Etat relais 2": "Zustand Relais 2",
+        "Rouge": "Rot",
+        "Vert": "Grün",
+        "Bleu": "Blau",
+        "Jaune": "Gelb",
+        "Rose": "Rosa",
+        "Blanc": "Weiß",
+        "Cyan": "Blaugrün (Cyan)",
+        "Off": "Aus",
+        "Off relais 1": "Relais 1 aus",
+        "On relais 1": "Relais 1 an",
+        "Off relais 2": "Relais 2 aus",
+        "On relais 2": "Relais 2 an"
+    },
+    "plugins\/center\/desktop\/php\/center.php": {
+        "Ajouter un center": "Center hinzufügen",
         "Rechercher": "Suchen nach",
-        "Gestion": "Verwaltung",
-        "Santé": "Gesundheit",
-        "Mon Wifip": "Mon Wifip",
-        "Sauvegarder": "Speichern",
-        "Supprimer": "Löschen",
-        "Configuration avancée": "Erweiterte Konfiguration",
-        "Equipement": "Gerät",
-        "Commandes": "Befehle",
+        "Mes centers": "Meine Center",
         "Général": "Allgemein",
         "Nom de l'équipement": "Gerätename",
         "Objet parent": "Eltern-Objekt",
         "Aucun": "Ohne",
+        "Catégorie": "Kategorie",
         "Activer": "aktivieren",
         "Visible": "Sichtbar",
-        "Wifi": "Wifi",
-        "Activer le wifi": "Wifi aktivieren",
-        "Réseau wifi": "Wifi Netzwerk",
-        "Clef": "Schlüssel ",
-        "Ip Fixe Wifi": "Ip Fixe Wifi",
-        "Attention le réglage d'une ip fixe peut rendre votre box invisible du réseau. Vérifiez bien les infos renseignées !! ": "Attention le réglage d'une ip fixe peut rendre votre box invisible du réseau. Vérifiez bien les infos renseignées !! ",
-        "IP fixe": "feste IP",
-        "Netmask": "Netzmaske",
-        "Gateway": "Gateway",
-        "Tethering": "Tethering",
-        "Activer Tether": "Activer Tether",
-        "Attention en activant le tether vous ne serez plus connecté au wifi. La box sera accessible en vous connectant au HotpointJeedom avec la clé et en vous rendant à l'adresse tether indiqué à droite! ": "Attention en activant le tether vous ne serez plus connecté au wifi. La box sera accessible en vous connectant au HotpointJeedom avec la clé et en vous rendant à l'adresse tether indiqué à droite! ",
-        "Clé (8 caractères minimum)": "Clé (8 caractères minimum)",
-        "Ethernet": "Ethernet",
-        "Activer ip fixe": "Activer ip fixe",
-        "Informations": "Information ",
-        "Adresse MAC ethernet": "Adresse MAC ethernet",
-        "Adresse Ip ethernet": "Adresse Ip ethernet",
-        "Masque ethernet": "Masque ethernet",
-        "Adresse MAC wifi": "Adresse MAC wifi",
-        "Adresse Ip wifi": "Adresse Ip wifi",
-        "Masque wifi": "Masque wifi",
-        "Adresse Ip Tether": "Adresse Ip Tether",
-        "Masque Tether": "Masque Tether",
+        "Supprimer": "Löschen",
+        "Sauvegarder": "Speichern",
+        "Tableau de commandes": "Bedienfeld",
         "Nom": "Name",
         "Options": "Optionen",
         "Action": "Aktion"
-    },
-    "plugins\/wifip\/desktop\/js\/wifip.js": {
-        "Santé Wifip": "Santé Wifip",
-        "Historiser": "Chronik",
-        "Tester": "Test"
     }
 }
