--- a/core/i18n/es_ES.json
+++ b/core/i18n/es_ES.json
@@ -1,62 +1,41 @@
 {
-    "plugins\/wifip\/core\/class\/wifip.class.php": {
-        "Connecter Wifi": "Conectar Wifi",
-        "Déconnecter Wifi": "Desconectar Wifi",
-        "Etat Wifi": "Estado Wifi",
-        "Etat Lan": "Estado Lan",
-        "Signal": "Señal",
-        "Rafraichir": "Actualizar",
-        "Lan IP": "Lan IP",
-        "Wifi IP": "Wifi IP",
-        "SSID": "SSID"
+    "plugins\/center\/plugin_info\/info.xml": {
+        "Plugin pour controller le hardware de votre Jeedom Center": "Plugin para controlar el hardware de su Jeedom Center",
+        "Aucune": "Ninguna"
     },
-    "plugins\/wifip\/desktop\/php\/wifip.php": {
+    "plugins\/center\/core\/class\/center.class.php": {
+        "Etat Couleur": "Estado Color",
+        "Etat relais 1": "Estado relé 1",
+        "Etat relais 2": "Estado relé 2",
+        "Rouge": "Rojo",
+        "Vert": "Verde",
+        "Bleu": "Azul",
+        "Jaune": "Amarillo",
+        "Rose": "Rosa",
+        "Blanc": "Blanco",
+        "Cyan": "Cian",
+        "Off": "Off",
+        "Off relais 1": "Off relé 1",
+        "On relais 1": "On relé 1",
+        "Off relais 2": "Off relé 2",
+        "On relais 2": "On relé 2"
+    },
+    "plugins\/center\/desktop\/php\/center.php": {
+        "Ajouter un center": "Añadir un Center",
         "Rechercher": "Buscar",
-        "Gestion": "Administración",
-        "Santé": "Salud",
-        "Mon Wifip": "Mi Wifip",
-        "Sauvegarder": "Guardar",
-        "Supprimer": "Borrar",
-        "Configuration avancée": "Configuración avanzada",
-        "Equipement": "Dispositivos",
-        "Commandes": "Comandos",
-        "Général": "General",
+        "Mes centers": "Mis Centers",
+        "Général": "Principal",
         "Nom de l'équipement": "Nombre del dispositivo",
         "Objet parent": "Objeto padre",
-        "Aucun": "Ninguno",
+        "Aucun": "Ningún",
+        "Catégorie": "Categoría",
         "Activer": "Activar",
         "Visible": "Visible",
-        "Wifi": "WiFi",
-        "Activer le wifi": "Activar el WiFi",
-        "Réseau wifi": "Redes WiFi",
-        "Clef": "Clave",
-        "Ip Fixe Wifi": "Ip fija Wifi",
-        "Attention le réglage d'une ip fixe peut rendre votre box invisible du réseau. Vérifiez bien les infos renseignées !! ": "¡Atención la configuración de una ip fija puede hacer que su sistema sea invisible desde la red. Revise la información cuidadosamente! ",
-        "IP fixe": "IP fija",
-        "Netmask": "Netmask",
-        "Gateway": "Gateway",
-        "Tethering": "Tethering",
-        "Activer Tether": "Activar Tether",
-        "Attention en activant le tether vous ne serez plus connecté au wifi. La box sera accessible en vous connectant au HotpointJeedom avec la clé et en vous rendant à l'adresse tether indiqué à droite! ": "¡Ten cuidado al activar el tether, no estarás conectado al wifi. El sistema será accesible conectándose al HotpointJeedom con la clave y yendo a la dirección ip de tether indicado a la derecha! ",
-        "Clé (8 caractères minimum)": "Clave (8 caracteres mínimo)",
-        "Ethernet": "Ethernet",
-        "Activer ip fixe": "Activar ip fija",
-        "Informations": "Informaciones",
-        "Adresse MAC ethernet": "Dirección MAC ethernet",
-        "Adresse Ip ethernet": "Dirección Ip ethernet",
-        "Masque ethernet": "Máscara ethernet",
-        "Adresse MAC wifi": "dirección MAC wifi",
-        "Adresse Ip wifi": "Dirección Ip wifi",
-        "Masque wifi": "Máscara wifi",
-        "Adresse Ip Tether": "Dirección Ip Tether",
-        "Masque Tether": "Máscara Tether",
+        "Supprimer": "Borrar",
+        "Sauvegarder": "Guardar",
+        "Tableau de commandes": "Panel de control",
         "Nom": "Nombre",
         "Options": "Opciones",
         "Action": "Acción"
-    },
-    "plugins\/wifip\/desktop\/js\/wifip.js": {
-        "Santé Wifip": "Salud Wifip",
-        "Historiser": "Historizar",
-        "Tester": "Probar"
     }
 }
