--- a/core/i18n/en_US.json
+++ b/core/i18n/en_US.json
@@ -1,62 +1,41 @@
 {
-    "plugins\/wifip\/core\/class\/wifip.class.php": {
-        "Connecter Wifi": "Connecter Wifi",
-        "Déconnecter Wifi": "Déconnecter Wifi",
-        "Etat Wifi": "Etat Wifi",
-        "Etat Lan": "Etat Lan",
-        "Signal": "Signal",
-        "Rafraichir": "Refresh",
-        "Lan IP": "Lan IP",
-        "Wifi IP": "Wifi IP",
-        "SSID": "SSID"
+    "plugins\/center\/plugin_info\/info.xml": {
+        "Plugin pour controller le hardware de votre Jeedom Center": "Plugin to control the hardware of your Jeedom Center",
+        "Aucune": "None"
     },
-    "plugins\/wifip\/desktop\/php\/wifip.php": {
+    "plugins\/center\/core\/class\/center.class.php": {
+        "Etat Couleur": "State Color",
+        "Etat relais 1": "State relay 1",
+        "Etat relais 2": "State relay 2",
+        "Rouge": "Red",
+        "Vert": "Green",
+        "Bleu": "Blue",
+        "Jaune": "Yellow",
+        "Rose": "PInk",
+        "Blanc": "White",
+        "Cyan": "Cyan",
+        "Off": "Off",
+        "Off relais 1": "Off relay 1",
+        "On relais 1": "On relay 1",
+        "Off relais 2": "Off relay 2",
+        "On relais 2": "On relay 2"
+    },
+    "plugins\/center\/desktop\/php\/center.php": {
+        "Ajouter un center": "Add a center",
         "Rechercher": "Search",
-        "Gestion": "Management",
-        "Santé": "Health",
-        "Mon Wifip": "Mon Wifip",
-        "Sauvegarder": "Save",
-        "Supprimer": "Delete",
-        "Configuration avancée": "Advanced configuration",
-        "Equipement": "Device",
-        "Commandes": "Commands",
-        "Général": "Main",
-        "Nom de l'équipement": "Device name",
+        "Mes centers": "My centers",
+        "Général": "General",
+        "Nom de l'équipement": "Name of the equipment",
         "Objet parent": "Parent object",
         "Aucun": "None",
+        "Catégorie": "Category",
         "Activer": "Activate",
         "Visible": "Visible",
-        "Wifi": "Wifi",
-        "Activer le wifi": "Activer le wifi",
-        "Réseau wifi": "Réseau wifi",
-        "Clef": "Key",
-        "Ip Fixe Wifi": "Ip Fixe Wifi",
-        "Attention le réglage d'une ip fixe peut rendre votre box invisible du réseau. Vérifiez bien les infos renseignées !! ": "Attention le réglage d'une ip fixe peut rendre votre box invisible du réseau. Vérifiez bien les infos renseignées !! ",
-        "IP fixe": "Fixed IP",
-        "Netmask": "Netmask",
-        "Gateway": "Gateway",
-        "Tethering": "Tethering",
-        "Activer Tether": "Activer Tether",
-        "Attention en activant le tether vous ne serez plus connecté au wifi. La box sera accessible en vous connectant au HotpointJeedom avec la clé et en vous rendant à l'adresse tether indiqué à droite! ": "Attention en activant le tether vous ne serez plus connecté au wifi. La box sera accessible en vous connectant au HotpointJeedom avec la clé et en vous rendant à l'adresse tether indiqué à droite! ",
-        "Clé (8 caractères minimum)": "Clé (8 caractères minimum)",
-        "Ethernet": "Ethernet",
-        "Activer ip fixe": "Activer ip fixe",
-        "Informations": "Information",
-        "Adresse MAC ethernet": "Adresse MAC ethernet",
-        "Adresse Ip ethernet": "Adresse Ip ethernet",
-        "Masque ethernet": "Masque ethernet",
-        "Adresse MAC wifi": "Adresse MAC wifi",
-        "Adresse Ip wifi": "Adresse Ip wifi",
-        "Masque wifi": "Masque wifi",
-        "Adresse Ip Tether": "Adresse Ip Tether",
-        "Masque Tether": "Masque Tether",
+        "Supprimer": "Delete",
+        "Sauvegarder": "Save",
+        "Tableau de commandes": "Control panel",
         "Nom": "Name",
         "Options": "Options",
         "Action": "Action"
-    },
-    "plugins\/wifip\/desktop\/js\/wifip.js": {
-        "Santé Wifip": "Santé Wifip",
-        "Historiser": "Historize",
-        "Tester": "Test"
     }
 }
