[ROBOT] Action all

--- a/core/i18n/de_DE.json
+++ b/core/i18n/de_DE.json
@@ -55,7 +55,7 @@
         "Action": "Aktion"
     },
     "plugins\/wifip\/desktop\/js\/wifip.js": {
-        "Santé Wifip": "Santé Wifip",
+        "Santé Wifip": "Wifip Gesundheit",
         "Historiser": "Chronik",
         "Tester": "Test"
     }
